[gd_scene load_steps=2 format=3 uid="uid://cmjls1ife05bp"]

[ext_resource type="Script" path="res://Cooking/Fanning.gd" id="1_hyjgc"]

[node name="Fanning" type="Node2D"]
script = ExtResource("1_hyjgc")

[node name="game_timer" type="Timer" parent="."]
wait_time = 20.0

[node name="timer_label" type="Label" parent="game_timer"]
offset_left = 63.0
offset_top = 35.0
offset_right = 202.0
offset_bottom = 58.0
text = "Timer:"

[node name="intensity_timer" type="Timer" parent="."]

[node name="debug_control" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 80.0
offset_top = 297.0
offset_right = 304.0
offset_bottom = 430.0

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 31.0
offset_top = 39.0
offset_right = 309.0
offset_bottom = 199.0

[node name="flame_meter" type="ProgressBar" parent="Control"]
layout_mode = 0
offset_left = 2.0
offset_top = 47.0
offset_right = 206.0
offset_bottom = 74.0

[node name="instructions_label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 40.0
offset_top = 89.0
offset_right = 236.0
offset_bottom = 112.0
text = "This is a Label :)"

[connection signal="timeout" from="game_timer" to="." method="_on_game_timer_timeout"]
[connection signal="timeout" from="intensity_timer" to="." method="_on_intensity_timer_timeout"]
